<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.DetailActivity"
            android:orientation="vertical"
            android:padding="16sp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent"
                android:layout_marginBottom="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:cardBackgroundColor="@android:color/black"
                    app:cardCornerRadius="8dp"
                    android:elevation="10dp"
                    android:layout_gravity="center">
                    <com.byandev.submission3uiuxapi.helper.SquareImageView
                        android:id="@+id/imgUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@tools:sample/avatars"/>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/tvFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="?attr/Text_Color"
                        android:maxLines="1"/>
                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:textColor="?attr/Text_subtitle_color"
                        android:maxLines="1"/>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tvBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="18sp"
                android:maxLines="1"
                android:textStyle="normal"
                android:textColor="?attr/Text_subtitle_color"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:id="@+id/tvCompany"
                    android:drawableStart="@drawable/ic_baseline_group_work_24"
                    android:drawablePadding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="normal|bold"/>

                <TextView
                    android:id="@+id/tvLocation"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="normal|bold"/>


                <TextView
                    android:id="@+id/tvBlog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_rss_feed_24"
                    android:drawablePadding="16dp"
                    android:text="@string/blog"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="normal|bold"/>


                <TextView
                    android:id="@+id/tvCountFollowers"
                    android:layout_marginEnd="5dp"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="normal|bold"/>


                <TextView
                    android:id="@+id/tvCountFollowing"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="normal|bold"/>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"
                    android:textSize="18sp"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="bold|normal"
                    android:layout_marginBottom="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFollowers"
                    android:layout_below="@id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"/>

                <ImageView
                    android:id="@+id/imgNoDataFollowers"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_width="256dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_search"
                    android:contentDescription="@string/todo" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="18sp"
                    android:textColor="?attr/Text_Color"
                    android:textStyle="bold|normal"
                    android:layout_marginBottom="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_below="@id/title2"
                    android:id="@+id/rvFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"/>
                <ImageView
                    android:id="@+id/imgNoDataFollowing"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_width="256dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_search"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>